# onnxparser

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: analyze_memory.py  build_model.py  schedule_spills.py  serve_multi_models.py  spill_schedule.json  static_allocation.py  tiny_transformer.py  trace_compare.py  visualize_graph.py  visualize_onnx.py
onnxparser/: __init__.py
onnxparser/analysis/: __init__.py  memory_analyzer.py  memory_scheduler.py  spill_scheduler.py  strategies.py
onnxparser/builder/: __init__.py  graph_builder.py
onnxparser/core/: __init__.py  dtypes.py  ops.py
onnxparser/executor/: __init__.py  runtime.py
onnxparser/export/: __init__.py  excel.py  to_onnx.py
onnxparser/optimizer/: __init__.py  pass_manager.py
onnxparser/optimizer/passes/: __init__.py  dead_code.py  folding.py  fusion.py  simplify.py
onnxparser/parser/: __init__.py  onnx_to_fx.py
onnxparser/trace/: __init__.py  codegen.py  comparator.py  dtypes.py  format.py  loader.py
onnxparser/visualizer/: __init__.py  extractor.py  graph_visualizer.py  layout.py  manager.py  memory_visualizer.py  memory_wrapper.py  server.py
onnxparser/visualizer/static/: app.js  index.html  styles.css
scripts/: generate_examples.py  install.sh  lint.sh  test.sh  typecheck.sh
tests/test_builder/: test_graph_builder.py
tests/test_executor/: test_runtime.py
tests/test_export/: test_to_onnx.py
tests/test_optimizer/: test_passes.py
tests/test_parser/: test_onnx_to_fx.py
