[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onnxparser"
version = "0.1.0"
description = "ONNX model builder, parser, executor and optimizer"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "onnx>=1.14.0",
    "numpy>=1.20.0",
    "protobuf>=3.20.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*", "examples"]
